--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components{
+  .icon{
+    @apply text-slate-100 text-xl;
+  }
+  .btn{
+    @apply hover:no-underline bg-blue-500 hover:bg-blue-100 tracking-wider w-full text-center text-slate-100 font-bold cursor-pointer upprcase px-4 py-2 rounded-md transition-colors block;
+  }
+}
