--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,30 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer base{
+  h1,
+  h2, 
+  h3,
+  h4{
+    @apply font-bold;
+  }
+  h1{
+    @apply text-4xl;
+  }
+  h2{
+    @apply text-3xl;
+  }
+  h3{
+    @apply text-2xl;
+  }
+  h4{
+    @apply text-xl;
+  }
+  p{
+    @apply text-sm text-gray-100; 
+  }
+}
+
 @layer components{
   .icon{
     @apply text-slate-100 text-xl;
