--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,15 @@ body {
   p{
     @apply text-sm text-gray-100; 
   }
+  form{
+    @apply rounded-xl p-4
+  }
+  label{
+    @apply mt-4
+  }
+  input, select, textarea {
+    @apply m-1 rounded bg-slate-600 p-1
+  }
 }
 
 @layer components{
@@ -49,6 +58,6 @@ body {
     @apply text-slate-100 text-xl;
   }
   .btn{
-    @apply hover:no-underline bg-blue-500 hover:bg-blue-100 tracking-wider w-full text-center text-slate-100 font-bold cursor-pointer upprcase px-4 py-2 rounded-md transition-colors block;
+    @apply hover:no-underline bg-blue-500 hover:bg-blue-100 tracking-wider w-full text-center text-slate-100 font-bold cursor-pointer uppercase px-4 py-2 rounded-md transition-colors block;
   }
 }
